# sbi-pdf2text

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml  sbi-pdf2text.py
.devcontainer/: README.MD  devcontainer.json  docker-compose.yml  init.sh
.devcontainer/python/: Dockerfile
