[tool.poetry]
name = "sbi-pdf2text"
version = "2.0"
description = ""
authors = ["Kei198403@gmail.com"]

[tool.poetry.dependencies]
python = "^3.12"
mojimoji = {git = "https://github.com/tpdn/mojimoji.git", rev = "fix_for_py312"}
pypdf = "^3.17.3"

[tool.poetry.dev-dependencies]
flake8 = "^6.1.0"
mypy = "^1.8.0"
autopep8 = "^2.0.4"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
