[tool.poetry]
name = "sbi-pdf2text"
version = "2.1"
description = ""
authors = ["Kei198403@gmail.com"]

[tool.poetry.dependencies]
python = "^3.12"
mojimoji = {git = "https://github.com/tpdn/mojimoji.git", rev = "fix_for_py312"}
pdfminer-six = "^20221105"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.8.0"
autopep8 = "^2.0.4"
pylint = "^3.0.3"
ipykernel = "^6.27.1"
pandas = "^2.1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
