[tool.poetry]
name = "sbi-pdf2text"
version = "2.3"
description = ""
authors = ["Kei198403@gmail.com"]

[tool.poetry.dependencies]
python = "^3.12"
mojimoji = "^0.0.13"
pdfminer-six = "^20240706"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"
autopep8 = "^2.3.1"
pylint = "^3.3.1"
ipykernel = "^6.29.5"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
